Carrusel funcional aunque no terminado

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <ul class="carousel__slide">
-            <li class="carousel__item">
+            <li class="visible carousel__item">
                 <img src="img/carousel_2.jpg" alt="body-image">
                 <div class="carousel__caption">
                     <div class="container">
@@ -62,19 +62,30 @@
                             <button type="button" class="btn btn-outline-white">Show More</button>
                         </div>
                     </div>
-
                 </div>
             </li>
             <li class="carousel__item">
                 <img src="img/carousel_3.jpg" alt="image">
                 <div class="carousel__caption">
-
+                    <div class="container">
+                        <div class="carousel__container-inner">
+                            <h1 class="carousel__title">Regenerate your DNA</h1>
+                            <p class="carousel__text">Discover the latest investigations in dna restoration and technologies available in 2021.</p>
+                            <button type="button" class="btn btn-outline-white">Show More</button>
+                        </div>
+                    </div>
                 </div>
             </li>
             <li class="carousel__item">
                 <img src="img/carousel_1.jpg" alt="dna-image">
                 <div class="carousel__caption">
-
+                    <div class="container">
+                        <div class="carousel__container-inner">
+                            <h1 class="carousel__title">Regenerate your DNA</h1>
+                            <p class="carousel__text">Discover the latest investigations in dna restoration and technologies available in 2021.</p>
+                            <button type="button" class="btn btn-outline-white">Show More</button>
+                        </div>
+                    </div>
                 </div>
             </li>
         </ul>
