--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <div class="carousel__caption">
                     <div class="container">
                         <div class="carousel__container-inner">
-                            <h1 class="carousel__title">Regenerate your DNA</h1>
+                            <h1 class="carousel__title">Healing Using Virus</h1>
                             <p class="carousel__text">Discover the latest investigations in dna restoration and technologies available in 2021.</p>
-                            <button type="button" class="btn btn-outline-white">Show More</button>
+                            <button type="button" class="btn btn-outline-white">Learn More</button>
                         </div>
                     </div>
                 </div>
@@ -69,9 +69,9 @@
                 <div class="carousel__caption">
                     <div class="container">
                         <div class="carousel__container-inner">
-                            <h1 class="carousel__title">Regenerate your DNA</h1>
-                            <p class="carousel__text">Discover the latest investigations in dna restoration and technologies available in 2021.</p>
-                            <button type="button" class="btn btn-outline-white">Show More</button>
+                            <h1 class="carousel__title">Do our Test</h1>
+                            <p class="carousel__text">Find out how much you know about genethics!</p>
+                            <button type="button" class="btn btn-outline-white">Test</button>
                         </div>
                     </div>
                 </div>
