Faltas de ortografia corregidas

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="container">
                         <div class="carousel__container-inner">
                             <h1 class="carousel__title">Healing Using Virus</h1>
-                            <p class="carousel__text">Discover the latest investigations in dna restoration and technologies available in 2021.</p>
+                            <p class="carousel__text">We are currently researching viruses to cure diseases.</p>
                             <button type="button" class="btn btn-outline-white">Learn More</button>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                     <div class="container">
                         <div class="carousel__container-inner">
                             <h1 class="carousel__title">Do our Test</h1>
-                            <p class="carousel__text">Find out how much you know about genethics!</p>
+                            <p class="carousel__text">Find out how much you know about genetics!</p>
                             <button type="button" class="btn btn-outline-white">Test</button>
                         </div>
                     </div>
