Seccion dos culumnas

--- a/index.html
+++ b/index.html
@@ -97,6 +97,37 @@
         </div>
     </div>
 
+    <!--***************************Two column section, welcome******************************-->
+
+    <section class="welcome">
+        <div class="container flex">
+            <div class="welcome__text padding flex-item">
+                <h1 class="welcome__title">A team focused on results</h1>
+                <img src="img/Title-border.png" alt="border">
+                <p class="welcome__text">We are a nonprofit organization focused on investigation. Our mision is to solve hereditary and genetic diseases using the latest technologies. </p>
+                <p class="welcome__text">Feel free to contact us if you have any suggestion or idea that you think can be interesting, we're also hiring so send us your resume and apply if you are interesten in working with us.</p>
+            </div>
+            <div class="welcome__image padding flex-item">
+                <img src="img/laboratorio.jpg" alt="Imagen de marca">
+            </div>
+        </div>
+    </section>
+
+    <!--*****************************Three column section*********************************-->
+
+    <section class="disocveries">
+        <div class="container flex">
+            <div class="card flex-item">
+
+            </div>
+            <div class="card flex-item">
+
+            </div>
+            <div class="card flex-item">
+
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
