Anyadido responsive design carrusel y seccion dos columnas

--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
 
     <nav class="nav">
         <div class="container flex">
-            <div class="nav__logo">
-                <a href="#"><span class="logo__1">regen</span><span class="logo__2">ite</span></a>
+            <div class="mobile-flex">
+                <div class="nav__logo">
+                    <a href="#"><span class="logo__1">regen</span><span class="logo__2">ite</span></a>
+                </div>
+                <div class="nav__hamburger">
+                    <img src="img/hamburger.svg" alt="display menu icon">
+                </div>
             </div>
             <ul class="nav__menu">
                 <li class="nav__item">
@@ -99,15 +104,16 @@
 
     <!--***************************Two column section, welcome******************************-->
 
-    <section class="welcome">
+    <section class="welcome padding">
         <div class="container flex">
-            <div class="welcome__text padding flex-item">
+            <div class="welcome__text flex-item">
                 <h1 class="welcome__title">A team focused on results</h1>
                 <img src="img/Title-border.png" alt="border">
                 <p class="welcome__text">We are a nonprofit organization focused on investigation. Our mision is to solve hereditary and genetic diseases using the latest technologies. </p>
                 <p class="welcome__text">Feel free to contact us if you have any suggestion or idea that you think can be interesting, we're also hiring so send us your resume and apply if you are interesten in working with us.</p>
+                <button type="button" class="btn btn-primary">Contact us</button>
             </div>
-            <div class="welcome__image padding flex-item">
+            <div class="welcome__image flex-item">
                 <img src="img/laboratorio.jpg" alt="Imagen de marca">
             </div>
         </div>
@@ -115,18 +121,43 @@
 
     <!--*****************************Three column section*********************************-->
 
-    <section class="disocveries">
-        <div class="container flex">
-            <div class="card flex-item">
-
+    <section class="disocveries padding margin">
+        <div class="container grid">
+            <div class="card">
+                <div class="card__body">
+                    <img src="img/scientist.jpg" alt="laboratory-image">
+                </div>
+                <div class="card__footer">
+                    <h3>Genetic cancer fixed in mice</h3>
+                    <p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur eum minima maxime, dolore, eligendi doloribus placeat eos perferendis reiciendis dolorum ullam aliquam tempora iste quidem? Esse corrupti cum ullam doloribus tempora!
+                        Obcaecati saepe est doloribus ipsa, veritatis velit assumenda ex voluptatibus illum?</p>
+                </div>
             </div>
-            <div class="card flex-item">
-
+            <div class="card">
+                <div class="card__body">
+                    <img src="img/cells.jpg" alt="laboratory-image">
+                </div>
+                <div class="card__footer">
+                    <h3>Genetic cancer fixed in mice</h3>
+                    <p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur eum minima maxime, dolore, eligendi doloribus placeat eos perferendis reiciendis dolorum ullam aliquam tempora iste quidem? Esse corrupti cum ullam doloribus tempora!
+                        Obcaecati saepe est doloribus ipsa, veritatis velit assumenda </p>
+                </div>
             </div>
-            <div class="card flex-item">
-
+            <div class="card">
+                <div class="card__body">
+                    <img src="img/carousel_21.jpg" alt="laboratory-image">
+                </div>
+                <div class="card__footer">
+                    <h3>Genetic cancer fixed in mice</h3>
+                    <p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur eum minima maxime, dolore, eligendi doloribus placeat eos perferendis reiciendis dolorum ullam aliquam tempora iste quidem? Esse corrupti cum ullam doloribus tempora!
+                        Obcaecati saepe est doloribus ipsa, veritatis velit assumenda ex voluptatibus</p>
+                </div>
             </div>
         </div>
+    </section>
+
+    <section>
+
     </section>
 </body>
 
