Anyadido log svg

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container flex">
             <div class="mobile-flex">
                 <div class="nav__logo">
-                    <a href="#"><span class="logo__1">regen</span><span class="logo__2">ite</span></a>
+                    <a href="#"><img src="img/logo.svg" alt="logo-regenite"></a>
                 </div>
                 <div class="nav__hamburger">
                     <img src="img/hamburger.svg" alt="display menu icon">
@@ -121,16 +121,22 @@
 
     <!--*****************************Three column section*********************************-->
 
-    <section class="disocveries padding margin">
+    <section class="disocveries p-1 margin ">
+        <div class="discoveries__title center">
+            <h1 class="welcome__title">Our discoveries</h1>
+            <hr class="my-4">
+        </div>
+
         <div class="container grid">
+
             <div class="card">
                 <div class="card__body">
                     <img src="img/scientist.jpg" alt="laboratory-image">
                 </div>
                 <div class="card__footer">
                     <h3>Genetic cancer fixed in mice</h3>
-                    <p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur eum minima maxime, dolore, eligendi doloribus placeat eos perferendis reiciendis dolorum ullam aliquam tempora iste quidem? Esse corrupti cum ullam doloribus tempora!
-                        Obcaecati saepe est doloribus ipsa, veritatis velit assumenda ex voluptatibus illum?</p>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur eum minima maxime, dolore, eligendi doloribus placeat eos perferendis reiciendis dolorum ullam aliquam tempora iste quidem? Esse corrupti cum ullam doloribus tempora!
+                        Obcaecati saepe est doloribus.</p>
                 </div>
             </div>
             <div class="card">
@@ -139,8 +145,8 @@
                 </div>
                 <div class="card__footer">
                     <h3>Genetic cancer fixed in mice</h3>
-                    <p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur eum minima maxime, dolore, eligendi doloribus placeat eos perferendis reiciendis dolorum ullam aliquam tempora iste quidem? Esse corrupti cum ullam doloribus tempora!
-                        Obcaecati saepe est doloribus ipsa, veritatis velit assumenda </p>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur eum minima maxime, dolore, eligendi doloribus placeat eos perferendis reiciendis dolorum ullam aliquam tempora iste quidem? Esse corrupti cum ullam doloribus tempora!
+                        Obcaecati . </p>
                 </div>
             </div>
             <div class="card">
@@ -149,8 +155,8 @@
                 </div>
                 <div class="card__footer">
                     <h3>Genetic cancer fixed in mice</h3>
-                    <p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur eum minima maxime, dolore, eligendi doloribus placeat eos perferendis reiciendis dolorum ullam aliquam tempora iste quidem? Esse corrupti cum ullam doloribus tempora!
-                        Obcaecati saepe est doloribus ipsa, veritatis velit assumenda ex voluptatibus</p>
+                    <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur eum minima maxime, dolore, eligendi doloribus placeat eos perferendis reiciendis dolorum ullam aliquam tempora iste quidem? Esse corrupti cum ullam doloribus tempora!
+                        Obcaecati saepe .</p>
                 </div>
             </div>
         </div>
