Erroes css carousel arreglados

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="carousel__caption vertical-center">
                     <div class="container">
                         <div class="carousel__container-inner">
-                            <h1 class="carousel__title">Healing Using Virus</h1>
+                            <h1 class="title">Healing Using Virus</h1>
                             <p class="text-1 pt-15 text-shadow">We are currently researching viruses to cure diseases.
                             </p>
                             <button type="button" class="btn btn-outline-white">Learn More</button>
@@ -75,7 +75,7 @@
                 <div class="carousel__caption vertical-center">
                     <div class="container">
                         <div class="carousel__container-inner">
-                            <h1 class="carousel__title">Do our Test</h1>
+                            <h1 class="title">Do our Test</h1>
                             <p class="text-1 pt-15 text-shadow">Find out how much you know about genetics!</p>
                             <button type="button" class="btn btn-outline-white">Test</button>
                         </div>
@@ -87,7 +87,7 @@
                 <div class="carousel__caption vertical-center">
                     <div class="container">
                         <div class="carousel__container-inner">
-                            <h1 class="carousel__title">Regenerate your DNA</h1>
+                            <h1 class="title">Regenerate your DNA</h1>
                             <p class="text-1 pt-15 text-shadow">Discover the latest investigations in dna restoration
                                 and technologies available in 2021.</p>
                             <button type="button" class="btn btn-outline-white">Show More</button>
