--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
                     asperiores.</p>
                 <button type="button" class="btn btn-primary">Read More</button>
             </div>
-            
+
         </div>
     </section>
-  
+
 
     <!--***********************Footer************************-->
 
@@ -241,12 +241,23 @@
                 <hr class="footer__border">
                 <p>regenite@gmail.com</p>
                 <p>Tlf: 623134212</p>
+                <div class="footer__redes">
+                    <a href="https://www.instagram.com">
+                        <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
+                    </a>
+                    <a href="https://www.twitter.com">
+                        <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
+                    </a>
+                    <a href="https://www.facebook.com">
+                        <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
+                    </a>
+                </div>
             </div>
-            <div class="subfooter flex">
-                <span>@Copyright 2021 - Xavier Lliteras</span>
-            </div>
-        </div>
 
+        </div>
+        <div class="subfooter flex">
+            <span>@Copyright 2021 - Xavier Lliteras</span>
+        </div>
 
     </footer>
 
