--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="#" class="nav__link">Contact</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#" class="nav__link">Tests</a>
+                    <a href="tests.html" class="nav__link">Tests</a>
                 </li>
                 <li class="nav__item">
                     <a href="#" class="nav__button white">DONATE</a>
