Buscador tests implementado y mejorados bordes

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="vertical-center content">
             <h2 class="title">Our Tests</h2>
             <p class="text-1">Check out our tests to prove your knowledge about science and technology.</p>
-            <button type="button" class="btn btn-primary">Try It</button>
+            <a href="tests.html" class="btn btn-primary">Try It</a>
         </div>
     </section>
 
@@ -242,13 +242,13 @@
                 <p>regenite@gmail.com</p>
                 <p>Tlf: 623134212</p>
                 <div class="footer__redes">
-                    <a href="https://www.instagram.com">
+                    <a href="https://www.instagram.com" target="_blank">
                         <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
                     </a>
-                    <a href="https://www.twitter.com">
+                    <a href="https://www.twitter.com" target="_blank">
                         <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
                     </a>
-                    <a href="https://www.facebook.com">
+                    <a href="https://www.facebook.com" target="_blank">
                         <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
                     </a>
                 </div>
