--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:image" content="img/iceland.jpg">
     <link type="text/css" rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
+    <script src="js/utilities.js" defer></script>
 </head>
 
 <body>
@@ -37,7 +38,7 @@
                     <a href="#" class="nav__link">Contact</a>
                 </li>
                 <li class="nav__item">
-                    <a href="tests.html" class="nav__link">Tests</a>
+                    <a href="tests.php" class="nav__link">Tests</a>
                 </li>
                 <li class="nav__item">
                     <a href="#" class="nav__button white">DONATE</a>
