--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <p class="text-1 pt-15 text-shadow">We are currently researching viruses to cure
                                     diseases.
                                 </p>
-                                <button type="button" class="btn btn-primary box-shadow">Learn More</button>
+                                <a class="btn btn-primary box-shadow">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                             <div class="carousel__container-inner">
                                 <h2 class="title text-shadow">Do our Test</h2>
                                 <p class="text-1 pt-15 text-shadow">Find out how much you know about genetics!</p>
-                                <button type="button" class="btn btn-primary box-shadow">Test</button>
+                                <a class="btn btn-primary box-shadow">Test</a>
                             </div>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                                 <p class="text-1 pt-15 text-shadow">Discover the latest investigations in dna
                                     restoration
                                     and technologies available in 2021.</p>
-                                <button type="button" class="btn btn-primary box-shadow">Show More</button>
+                                <a class="btn btn-primary box-shadow">Show More</a>
                             </div>
                         </div>
                     </div>
@@ -118,12 +118,13 @@
                     <p class="text-1">We are a nonprofit organization focused on investigation. Our mision is to solve
                         hereditary and genetic diseases using the latest technologies. </p>
                     <p class="text-1">We can't thank you enough for all the donations we're reciving, a project needs
-                        funding and we assure that this money is being used in the development of revolutionary technology.</p>
+                        funding and we assure that this money is being used in the development of revolutionary
+                        technology.</p>
                     <p class="text-1">Feel free to <span class="bold">contact us</span> if you have any suggestion or
                         idea that you think can be
                         interesting, we're also hiring so send us your resume and apply if you are interesten in working
                         with us.</p>
-                    <button type="button" class="btn btn-primary">Contact us</button>
+                    <a class="btn btn-primary">Contact us</a>
                 </div>
                 <div class="img-cover flex-item">
                     <img src="img/laboratorio.jpg" alt="Imagen de marca">
@@ -228,31 +229,38 @@
     <footer class="footer">
         <div class="container grid">
             <div class="grid-item">
-                <img src="img/logo.svg" class="footer__logo" alt="logo">
-                <p>875 - 321 - 123</p>
-                <p>regenite@gmail.com</p>
-                <p>102 Carrer de sa ma, 07100</p>
+                <div class="footer__container">
+                    <img src="img/logo.svg" class="footer__logo" alt="logo">
+                    <p>875 - 321 - 123</p>
+                    <p>regenite@gmail.com</p>
+                    <p>102 Carrer de sa ma, 07100</p>
+                </div>
+
             </div>
             <div class="grid-item">
-                <h3>Schedule</h3>
-                <p>Monday : 8am - 5pm</p>
-                <p>Friday : 9am - 6pm</p>
-                <p>Sunday : 10am - 05pm</p>
+                <div class="footer__container">
+                    <h3>Schedule</h3>
+                    <p>Monday : 8am - 5pm</p>
+                    <p>Friday : 9am - 6pm</p>
+                    <p>Sunday : 10am - 05pm</p>
+                </div>
             </div>
             <div class="grid-item">
-                <h3>Contact</h3>
-                <p>regenite@gmail.com</p>
-                <p>Tlf: 623134212</p>
-                <div class="footer__redes">
-                    <a href="https://www.instagram.com" target="_blank">
-                        <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
-                    </a>
-                    <a href="https://www.twitter.com" target="_blank">
-                        <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
-                    </a>
-                    <a href="https://www.facebook.com" target="_blank">
-                        <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
-                    </a>
+                <div class="footer__container">
+                    <h3>Contact</h3>
+                    <p>regenite@gmail.com</p>
+                    <p>Tlf: 623134212</p>
+                    <div class="footer__redes">
+                        <a href="https://www.instagram.com" target="_blank">
+                            <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
+                        </a>
+                        <a href="https://www.twitter.com" target="_blank">
+                            <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
+                        </a>
+                        <a href="https://www.facebook.com" target="_blank">
+                            <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
