Fixed some things

--- a/index.html
+++ b/index.html
@@ -192,10 +192,17 @@
             <div class="background">
                 <div class="mask"></div>
             </div>
-            <div class="vertical-center content">
-                <h2 class="title">Our <span class="fixed-background__color">Tests</span></h2>
-                <p class="text-1">Check out our tests to prove your knowledge about science and technology.</p>
-                <a href="tests.html" class="btn btn-primary">Try It</a>
+            <div class="vertical-center fixed-background__container">
+                <div class="fixed-background__content flex container">
+                    <div class="fixed-background__image">
+                        <img src="img/test.jpg" alt="test">
+                    </div>
+                    <div class="fixed-background__text">
+                        <h2 class="title">Our <span class="fixed-background__color">Tests</span></h2>
+                        <p class="text-1">We have a large number of tests soi chet them out!</p>
+                        <a href="tests.html" class="btn btn-primary">Try It</a>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -238,7 +245,7 @@
 
             </div>
             <div class="grid-item">
-                <div class="footer__container">
+                <div class="footer__container ">
                     <h3>Schedule</h3>
                     <p>Monday : 8am - 5pm</p>
                     <p>Friday : 9am - 6pm</p>
@@ -246,7 +253,7 @@
                 </div>
             </div>
             <div class="grid-item">
-                <div class="footer__container">
+                <div class="footer__container ">
                     <h3>Contact</h3>
                     <p>regenite@gmail.com</p>
                     <p>Tlf: 623134212</p>
