New pages implemented

--- a/donate.html
+++ b/donate.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Regenite a company with future">
     <meta property="og:description" content="We are a nonprofit organization, our goal is to investigate genetics">
     <meta property="og:image" content="img/iceland.jpg">
-    <link type="text/css" rel="stylesheet" href="css/contact.css">
+    <link type="text/css" rel="stylesheet" href="css/donate.css">
     <script src="js/utilities.js" defer></script>
 </head>
 
@@ -34,7 +34,7 @@
                     <a href="index.html" class="nav__link">Home</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#" class="nav__link">Contact</a>
+                    <a href="contact.html" class="nav__link">Contact</a>
                 </li>
                 <li class="nav__item">
                     <a href="tests.php" class="nav__link">Tests</a>
@@ -107,54 +107,74 @@
             </div>
         </section>
 
-        <section class="contact padding">
-            <div class="container flex">
-                <div class="flex-item">
-                    <h2>Contact</h2>
-                    <hr class="underline">
-                    <p>If you want to talk about our campany or you wish to propose
-                        some idea feel free to send us a message, we'll contact you
-                        as soon as possible.
-                        You can find us on :
-                    </p>
-                    <ul class="contact__social">
-                        <a href="https://www.facebook.com" class="contact__icon"><img src="img/facebook.svg" alt="facebook icon"></a>
-                        <a href="https://www.instagram.com" class="contact__icon"><img src="img/logo-instagram.svg" alt="instagram icon">
-                        </a>
-                        <a href="https://www.twitter.com" class="contact__icon"><img src="img/logo-twitter.svg" alt="twitter logo"></a>
-                        
-                    </ul>
-                </div>
-                <div class="flex-item">
-                    <form class="contact__form">
-                        <div class="contact__element flex">
-                            <div class="contact__name">
-                                <label for="name">NAME*</label>
-                                <input type="text" class="contact__input" id="name">
-                            </div>
-                            <div class="contact__email">
-                                <label for="email">EMAIL *</label>
-                                <input type="text" class="contact__input" id="email">
-                            </div>
-                        </div>
-                        <div class="contact__element">
-                            <label for="subject">SUBJECT *</label>
-                            <input type="text" class="contact__input" id="subject">
-                        </div>
-                        <div class="contact__element">
-                            <label for="message">MESSAGE *</label>
-                            <textarea rows="10" class="contact__input" id="message"></textarea>
-                        </div>
 
-                        <div class="contact__element">
-                            <input type="submit" class="contact__input" value="Send message">
+        <section class="donate padding">
+            <div class="container">
+                <h2>Make a donation</h2>
+                <hr class="underline">
+                <p class="donate__paragraph">We can't thank you enough for all the donations we're reciving, we're
+                    investing a lot of money in the development of revolutionary technology. </p>
+            </div>
+        </section>
+
+        <section class="amount">
+            <div class="container">
+                <div class="flex flex-amount">
+                    <div class="amount__donation">
+                        <h2 class="subtitle">Donation amount</h2>
+                        <div class="grid">
+                            <div class="grid-item" id="selected"><span>5$</span></div>
+                            <div class="grid-item"><span>10$</span></div>
+                            <div class="grid-item"><span>25$</span></div>
+                            <div class="grid-item"><span>100$</span></div>
+                            <div class="grid-item"><span>200$</span></div>
+                            <div class="grid-item"><span>500$</span></div>
                         </div>
-                    </form>
+                    </div>
+                    <div class="identity">
+                        <h2 class="subtitle">I am an</h2>
+                        <div class="flex">
+                            <div class="identity__item" id="selected">Individual</div>
+                            <div class="identity__item">Organization</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <!--*****************FOOTER*************************-->
+        <section class="identity">
+            <div class="container">
+
+            </div>
+        </section>
+
+        <section class="data padding">
+            <div class="container">
+                <h2 class="subtitle">Your contact data</h2>
+                <form class="data__form">
+                    <div class="data__element flex">
+                        <div class="data__name">
+                            <label for="name">NAME *</label>
+                            <input type="text" class="data__input" id="name">
+                        </div>
+                        <div class="data__email">
+                            <label for="email">EMAIL *</label>
+                            <input type="text" class="data__input" id="email">
+                        </div>
+
+                    </div>
+                    <div class="data__element">
+                        <label for="message">MESSAGE FOR US (optional)</label>
+                        <textarea rows="15" class="data__input" id="message"></textarea>
+                    </div>
+                    <div class="data__element">
+                        <input type="submit" value="DONATE" class="data__input">
+                    </div>
+                </form>
+            </div>
+        </section>
+
+        <!--FOOTER-->
         <footer class="footer">
             <div class="container grid">
                 <div class="grid-item">
