--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                     <a href="#" class="nav__link">Home</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#" class="nav__link">Contact</a>
+                    <a href="contact.html" class="nav__link">Contact</a>
                 </li>
                 <li class="nav__item">
                     <a href="tests.php" class="nav__link">Tests</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#" class="nav__button white">DONATE</a>
+                    <a href="donate.html" class="nav__button white">DONATE</a>
                 </li>
             </ul>
         </div>
@@ -64,7 +64,7 @@
                     <div class="carousel__caption vertical-center">
                         <div class="container">
                             <div class="carousel__container-inner">
-                                <h1 class="title text-shadow">Healing Using Virus</h1>
+                                <h1 class="title text-shadow">Using virus to heal</h1>
                                 <p class="text-1 pt-15 text-shadow">We are currently researching viruses to cure
                                     diseases.
                                 </p>
@@ -199,7 +199,7 @@
                     </div>
                     <div class="fixed-background__text">
                         <h2 class="title">Our <span class="fixed-background__color">Tests</span></h2>
-                        <p class="text-1">We have a large number of tests soi chet them out!</p>
+                        <p class="text-1">We've been collecting a large database of tests, check them out</p>
                         <a href="tests.html" class="btn btn-primary">Try It</a>
                     </div>
                 </div>
