--- a/donate.html
+++ b/donate.html
@@ -37,7 +37,7 @@
                     <a href="contact.html" class="nav__link">Contact</a>
                 </li>
                 <li class="nav__item">
-                    <a href="tests.php" class="nav__link">Tests</a>
+                    <a href="tests.html" class="nav__link">Tests</a>
                 </li>
                 <li class="nav__item">
                     <a href="donate.html" class="nav__button white">DONATE</a>
