--- a/tests.html
+++ b/tests.html
@@ -160,42 +160,43 @@
     </section>
 
     <!--***********************Footer*******************************-->
-    <footer class="footer margin">
+    <footer class="footer">
         <div class="container grid">
-            <div class="grid-item center">
-                <img src="img/logo-footer.svg" class="footer__logo" alt="logo">
-                <hr class="footer__border">
-                <p>875 - 321 - 123</p>
-                <p>regenite@gmail.com</p>
-                <p>102 Carrer de sa ma, 07100</p>
+            <div class="grid-item">
+                <div class="footer__container">
+                    <img src="img/logo.svg" class="footer__logo" alt="logo">
+                    <p>875 - 321 - 123</p>
+                    <p>regenite@gmail.com</p>
+                    <p>102 Carrer de sa ma, 07100</p>
+                </div>
+
             </div>
-            <div class="grid-item center">
-                <hr class="footer__border">
-                <h3>Schedule</h3>
-                <hr class="footer__border">
-                <p>Monday : 8am - 5pm</p>
-                <p>Friday : 9am - 6pm</p>
-                <p>Sunday : 10am - 05pm</p>
-            </div>
-            <div class="grid-item center">
-                <hr class="footer__border">
-                <h3>Contact</h3>
-                <hr class="footer__border">
-                <p>regenite@gmail.com</p>
-                <p>Tlf: 623134212</p>
-                <div class="footer__redes">
-                    <a href="https://www.instagram.com" target="_blank">
-                        <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
-                    </a>
-                    <a href="https://www.twitter.com" target="_blank">
-                        <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
-                    </a>
-                    <a href="https://www.facebook.com" target="_blank">
-                        <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
-                    </a>
+            <div class="grid-item">
+                <div class="footer__container ">
+                    <h3>Schedule</h3>
+                    <p>Monday : 8am - 5pm</p>
+                    <p>Friday : 9am - 6pm</p>
+                    <p>Sunday : 10am - 05pm</p>
                 </div>
             </div>
-
+            <div class="grid-item">
+                <div class="footer__container ">
+                    <h3>Contact</h3>
+                    <p>regenite@gmail.com</p>
+                    <p>Tlf: 623134212</p>
+                    <div class="footer__redes">
+                        <a href="https://www.instagram.com" target="_blank">
+                            <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
+                        </a>
+                        <a href="https://www.twitter.com" target="_blank">
+                            <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
+                        </a>
+                        <a href="https://www.facebook.com" target="_blank">
+                            <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="subfooter flex">
             <span>@Copyright 2021 - Xavier Lliteras</span>
