--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <ul class="nav__menu">
                 <li class="nav__item">
-                    <a href="#" class="nav__link">Home</a>
+                    <a href="#" class="nav__link nav__active">Home</a>
                 </li>
                 <li class="nav__item">
                     <a href="contact.html" class="nav__link">Contact</a>
@@ -121,9 +121,9 @@
                         technology.</p>
                     <p class="text-1">Feel free to <span class="bold">contact us</span> if you have any suggestion or
                         idea that you think can be
-                        interesting, we're also hiring so send us your resume and apply if you are interesten in working
+                        interesting, we're also hiring so send us your resume and apply if you are interested in working
                         with us.</p>
-                    <a class="btn btn-primary">Contact us</a>
+                    <a href="contact.html" class="btn btn-primary">Contact us</a>
                 </div>
                 <div class="img-cover flex-item">
                     <img src="img/laboratorio.jpg" alt="Imagen de marca">
@@ -140,7 +140,6 @@
             </div>
 
             <div class="container grid">
-
                 <div class="card">
                     <div class="card__body">
                         <img src="img/scientist.jpg" alt="laboratory-image">
