Added nav__active in all pages

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="carousel__container-inner">
                                 <h2 class="title text-shadow">Do our Test</h2>
                                 <p class="text-1 pt-15 text-shadow">Find out how much you know about genetics!</p>
-                                <a class="btn btn-primary box-shadow">Test</a>
+                                <a href="tests.html" class="btn btn-primary box-shadow">Test</a>
                             </div>
                         </div>
                     </div>
