--- a/tests.html
+++ b/tests.html
@@ -38,7 +38,7 @@
                     <a href="contact.html" class="nav__link">Contact</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#" class="nav__link">Tests</a>
+                    <a href="#" class="nav__link nav__active">Tests</a>
                 </li>
                 <li class="nav__item">
                     <a href="donate.html" class="nav__button white">DONATE</a>
