--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                     <a href="index.html" class="nav__link">Home</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#" class="nav__link">Contact</a>
+                    <a href="#" class="nav__link nav__active">Contact</a>
                 </li>
                 <li class="nav__item">
                     <a href="tests.html" class="nav__link">Tests</a>
